# LayerZero-python-aptos

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: transfer_usdc_via_theaptosbridge.py
js/: index.js  package-lock.json  package.json
src/: const.py  endpoint.py  executor.py  executor_config.py  main.py  requirements.txt  utils.py
src/apps/: bridge.py  lz_app.py
src/sdk/: aptos_sdk.py  base_sdk.py
src/uln/: uln_config.py  uln_signer.py
tests/unit/: test_utils.py
